--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "php": "^7.4|^8.0"
+    "php": "^7.4|^8.0",
+    "ext-json": "*"
   },
   "require-dev": {
     "coenjacobs/mozart": "^0.7.1",
