--- a/dependencies/composer.json
+++ b/dependencies/composer.json
@@ -8,10 +8,10 @@
   "prefer-stable": true,
   "require": {
     "php": "^7.4|^8.0",
+    "ext-json": "*",
     "automattic/jetpack-autoloader": "^2.11",
     "cardanopress/framework": "^2.0",
-    "kermage/external-update-manager": "^2.2",
-    "themeplate/cpt": "^2.2"
+    "kermage/external-update-manager": "^2.2"
   },
   "autoload": {
     "exclude-from-classmap": ["vendor/"],
